syntax = "proto3";

package order;

option go_package = "gitlab.com/maxtv564/order-service/pkg/order_v1";

service OrderServiceV1 {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  string product = 2;
  double amount = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
  string user_name = 2;
  string user_email = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  string product = 3;
  double amount = 4;
}